Bug 1306543 - Avoid using g_unicode_script_from_iso15924 directly. r=jfkthame a=release